--- a/style.css
+++ b/style.css
@@ -357,9 +357,85 @@ i.fa-arrow-right{
    
 }
 
-/*============= Tab Device ==================*/
+/*============= Tab(Small) Device ==================*/
 
-@media screen and (min-width: 577px) and (max-width: 992px) {
+@media screen and (min-width: 577px) and (max-width: 789px){
+
+    .header-banner-flex, .header-flex{
+        flex-direction: column;
+    }
+
+    .banner-image {
+        order: -1; 
+        margin-bottom: 90px;
+      }
+    
+      .banner-content {
+        order: 1;
+        margin-bottom: -90px;
+        text-align: center;
+      }
+
+    nav ul{
+        background-color: #E02C6D;
+        padding: 15px 25px;
+        border-radius: 10px;
+        margin-bottom: 50px;
+    }
+
+nav ul li a{
+    color: white;
+}
+
+nav ul li a:hover{
+    color: green;
+}
+
+
+.our-sponsors-flex{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    text-align: justify;
+    margin-left: 50px;
+}
+
+.collection-cards-grid{
+    grid-template-columns: repeat(1, 1fr);
+}
+
+
+img.img-dv{
+    width: 90%;
+    object-fit: cover;
+}
+
+.featured-grid{
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+    align-items: center;
+}
+
+.featured-image{
+    order: -1;
+    text-align: center;
+}
+
+.featured-image img{
+    width: 600px;
+}
+
+.featured-content{
+    order: 1;
+    text-align: center;
+}
+
+
+}
+
+/*============= Tab(Big) Device ==================*/
+
+@media screen and (min-width: 790px) and (max-width: 992px) {
     .header-banner-flex, .header-flex{
         flex-direction: column;
     }
